# neutron

./: MODULE.bazel  README.md  WORKSPACE
daros/: BUILD.bazel  lex.cc  lex.h  lex_test.cc  package.cc  package.h  package_test.cc  syntax.cc  syntax.h  syntax_test.cc
daros/serdes/: gen.cc  gen.h  gen_test.cc  runtime.h
daros/testdata/other_msgs/msg/: Other.msg
daros/zerocopy/: gen.cc  gen.h  gen_test.cc  runtime.h
davros/: BUILD.bazel  common_gen.h  common_runtime.h  davros_library.bzl  davros_serdes_library.bzl  davros_zeros_library.bzl  descriptor.cc  descriptor.h  descriptor_test.cc  lex.cc  lex.h  lex_test.cc  main.cc  package.cc  package.h  package_test.cc  serdes_runtime_test.cc  syntax.cc  syntax.h  syntax_test.cc  zeros_runtime_test.cc
davros/descriptor/: Descriptor.cc  Descriptor.h  Field.cc  Field.h  README.md
davros/descriptor/msg/: Descriptor.msg  Field.msg
davros/serdes/: gen.cc  gen.h  gen_test.cc  runtime.h
davros/testdata/other_msgs/msg/: Enum.msg  Other.msg
davros/testdata/test_msgs/msg/: All.msg  Enum32.msg  Enum64.msg  Enum8.msg  Pose.msg
davros/zerocopy/: gen.cc
davros/zeros/: arrays.h  buffer.h  buffer_test.cc  fields.h  gen.cc  gen.h  gen_test.cc  iterators.h  message.h  message_test.cc  payload_buffer.cc  payload_buffer.h  runtime.h  vectors.h
gemini/: BUILD.bazel  common_gen.h  common_runtime.h  descriptor.cc  descriptor.h  descriptor_test.cc  gemini_library.bzl  lex.cc  lex.h  lex_test.cc  main.cc  package.cc  package.h  package_test.cc  serdes_runtime_test.cc  syntax.cc  syntax.h  syntax_test.cc  zeros_runtime_test.cc
gemini/descriptor/: Descriptor.cc  Descriptor.h  Field.cc  Field.h  README.md
gemini/docs/: user_guide.md
gemini/serdes/: gen.cc  gen.h  gen_test.cc  runtime.h
gemini/testdata/other_msgs/msg/: Other.msg
gemini/testdata/test_msgs/msg/: All.msg  Enum16.msg  Enum64.msg  Vector.msg
gemini/zeros/: arrays.h  buffer.h  fields.h  gen.cc  gen.h  gen_test.cc  iterators.h  message.h  message_test.cc  runtime.h  vectors.h
neutron/: BUILD.bazel  c_runtime_test.cc  common_gen.h  common_runtime.h  descriptor.cc  descriptor.h  descriptor_test.cc  lex.cc  lex.h  lex_test.cc  main.cc  md5.cc  md5.h  neutron_library.bzl  package.cc  package.h  package_test.cc  serdes_runtime_test.cc  syntax.cc  syntax.h  syntax_test.cc  zeros_runtime_test.cc
neutron/c_serdes/: gen.cc  gen.h  runtime.c  runtime.cc  runtime.h
neutron/descriptor/: Descriptor.cc  Descriptor.h  Field.cc  Field.h  README.md
neutron/docs/: user_guide.md
neutron/serdes/: gen.cc  gen.h  gen_test.cc  mux.cc  mux.h  runtime.h
neutron/testdata/other_msgs/msg/: Other.msg
neutron/testdata/test_msgs/msg/: All.msg  Fixed.msg  Nested.msg  SubFixed.msg
neutron/zeros/: arrays.h  buffer.h  fields.h  gen.cc  gen.h  gen_test.cc  iterators.h  message.h  message_test.cc  runtime.h  vectors.h
