load("//davros:davros_library.bzl", "davros_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "msglib",
    srcs = [
        "lex.cc",
        "package.cc",
        "syntax.cc",
    ],
    hdrs = [
        "lex.h",
        "package.h",
        "syntax.h",
    ],
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "lex_test",
    srcs = [
        "lex_test.cc",
    ],
    deps = [
        ":msglib",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "syntax_test",
    srcs = [
        "syntax_test.cc",
    ],
    deps = [
        ":msglib",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "package_test",
    srcs = [
        "package_test.cc",
    ],
    data = [
        ":msgs",
    ],
    deps = [
        ":msglib",
        "@com_google_googletest//:gtest",
    ],
)

filegroup(
    name = "msgs",
    srcs = glob(["testdata/**"]),
)

cc_library(
    name = "serdes",
    srcs = [
        "serdes/gen.cc",
    ],
    hdrs = [
        "serdes/gen.h",
    ],
    deps = [
        ":msglib",
    ],
)

cc_test(
    name = "gen_test",
    srcs = [
        "serdes/gen_test.cc",
    ],
    data = [
        ":msgs",
    ],
    deps = [
        ":serdes",
        "@com_google_googletest//:gtest",
    ],
)

davros_library(
    name = "std_msgs",
    srcs = [
        "testdata/std_msgs/msg/Header.msg",
    ],
)

davros_library(
    name = "other_msgs",
    srcs = [
        "testdata/other_msgs/msg/Other.msg",
    ],
    deps = [
        ":std_msgs",
    ],
)

cc_test(
    name = "serdes_runtime_test",
    srcs = [
        "serdes_runtime_test.cc",
    ],
    data = [
        ":msgs",
    ],
    deps = [
        ":davros_serdes_runtime",
        ":other_msgs",
        "@com_google_googletest//:gtest",
        "@toolbelt//toolbelt",
    ],
)

cc_binary(
    name = "davros",
    srcs = [
        "main.cc",
    ],
    deps = [
        ":msglib",
        ":serdes",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
    ],
)

cc_library(
    name = "davros_serdes_runtime",
    srcs = [
        "serdes/runtime.h",
    ],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
    ],
)
