load("//davros:davros_serdes_library.bzl", "davros_serdes_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "msglib",
    srcs = [
        "lex.cc",
        "package.cc",
        "syntax.cc",
    ],
    hdrs = [
        "lex.h",
        "package.h",
        "syntax.h",
    ],
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_library(
    name = "common_runtime",
    hdrs = [
        "common_runtime.h",
    ],
)

cc_test(
    name = "lex_test",
    srcs = [
        "lex_test.cc",
    ],
    deps = [
        ":msglib",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "syntax_test",
    srcs = [
        "syntax_test.cc",
    ],
    deps = [
        ":msglib",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "package_test",
    srcs = [
        "package_test.cc",
    ],
    data = [
        ":msgs",
    ],
    deps = [
        ":msglib",
        "@com_google_googletest//:gtest",
    ],
)

filegroup(
    name = "msgs",
    srcs = glob(["testdata/**"]),
)

cc_library(
    name = "serdes",
    srcs = [
        "serdes/gen.cc",
    ],
    hdrs = [
        "serdes/gen.h",
    ],
    deps = [
        ":common_runtime",
        ":descriptor",
        ":msglib",
    ],
)

cc_library(
    name = "zeros",
    srcs = [
        "zeros/gen.cc",
        "zeros/payload_buffer.cc",
        # "zeros/message.cc",
    ],
    hdrs = [
        "zeros/gen.h",
        "zeros/message.h",
        "zeros/payload_buffer.h",
        "zeros/runtime.h",
    ],
    deps = [
        ":common_runtime",
        ":descriptor",
        ":msglib",
    ],
)

cc_test(
    name = "zeros_buffer_test",
    srcs = [
        "zeros/buffer_test.cc",
    ],
    data = [
        ":msgs",
    ],
    deps = [
        ":zeros",
        "@com_google_googletest//:gtest",
        "@toolbelt//toolbelt",
    ],
)

cc_test(
    name = "zeros_message_test",
    srcs = [
        "zeros/message_test.cc",
    ],
    data = [
        ":msgs",
    ],
    deps = [
        ":zeros",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_googletest//:gtest",
        "@toolbelt//toolbelt",
    ],
)

cc_test(
    name = "serdes_gen_test",
    srcs = [
        "serdes/gen_test.cc",
    ],
    data = [
        ":msgs",
    ],
    deps = [
        ":serdes",
        "@com_google_googletest//:gtest",
    ],
)

davros_serdes_library(
    name = "std_msgs",
    srcs = [
        "testdata/std_msgs/msg/Header.msg",
    ],
    runtime = ":serdes_runtime",
)

davros_serdes_library(
    name = "other_msgs",
    srcs = [
        "testdata/other_msgs/msg/Other.msg",
        "testdata/other_msgs/msg/Enum.msg",
    ],
    runtime = ":serdes_runtime",
    deps = [
        ":std_msgs",
    ],
)

davros_serdes_library(
    name = "test_msgs",
    srcs = [
        "testdata/test_msgs/msg/Pose.msg",
        "testdata/test_msgs/msg/Vector.msg",
    ],
    runtime = ":serdes_runtime",
    deps = [
        ":other_msgs",
    ],
)

cc_test(
    name = "serdes_runtime_test",
    srcs = [
        "serdes_runtime_test.cc",
    ],
    data = [
        ":msgs",
    ],
    deps = [
        ":other_msgs",
        ":serdes_runtime",
        "@com_google_googletest//:gtest",
        "@toolbelt//toolbelt",
    ],
)

cc_binary(
    name = "davros",
    srcs = [
        "main.cc",
    ],
    deps = [
        ":msglib",
        ":serdes",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
    ],
)

cc_library(
    name = "serdes_runtime",
    srcs = [
        "serdes/runtime.h",
    ],
    deps = [
        ":common_runtime",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
    ],
)

davros_serdes_library(
    name = "descriptor_msg",
    srcs = [
        "descriptor/msg/Descriptor.msg",
        "descriptor/msg/Field.msg",
    ],
    runtime = ":serdes_runtime",
)

cc_library(
    name = "descriptor",
    srcs = [
        "descriptor.cc",
        "descriptor/Descriptor.cc",
        "descriptor/Field.cc",
    ],
    hdrs = [
        "descriptor.h",
        "descriptor/Descriptor.h",
        "descriptor/Field.h",
    ],
    deps = [
        ":common_runtime",
        ":msglib",
        ":serdes_runtime",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
        "@toolbelt//toolbelt",
    ],
)

cc_test(
    name = "descriptor_test",
    srcs = [
        "descriptor_test.cc",
    ],
    data = [
        ":msgs",
    ],
    deps = [
        ":descriptor",
        ":other_msgs",
        "@com_google_googletest//:gtest",
        "@toolbelt//toolbelt",
    ],
)
